# sketchup-mcp

./: .env.example  .gitignore  API_README.md  README.md  TESTING_GUIDE.md  claude_desktop_config.json  pyproject.toml  run_api_server.sh  test_api.sh  test_deck_api.sh  test_sketchup_connection.sh
engineering/: roof_truss.py
resources/: fink_truss_engineering_spec.md  foundation_guide.md  framing_standards.md  roof_trusses.md  stairs.md  truss_implementation_guide.md
sketchup_plugin/: DEPLOYMENT.md  deploy.sh  sketchup_mcp_server.rb
sketchup_plugin/lib/: construction.rb
sketchup_plugin/lib/construction/: deck.rb  medeek_foundation.rb  medeek_foundation_reader.rb  medeek_truss.rb  medeek_wall.rb  roof_truss.rb  wall.rb
src/deck_designer/: __init__.py  api.py  calculations.py  code_loader.py  example.py
src/deck_designer/codes/: ohio_2019.json
src/sketchup_mcp/: __init__.py  __main__.py  server.py
tests/: README.md  __init__.py  conftest.py  test_basic.py  test_error_handling.py  test_geometry_tools.py  test_query_tools.py  test_transformation_tools.py
